# journald-to-cloudwatch

./: Cargo.toml  README.md  requirements.in  requirements.txt  tasks.py
src/: cloudwatch.rs  configuration.rs  ec2.rs  main.rs
tools/: Dockerfile.amazonlinux2  Dockerfile.ubuntu  build.py  in_container_run.sh  package.py
